--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "ally.js": "^1.4.1",
     "core-js": "^2.6.5",
-    "portal-vue": "^2.1.4",
+    "portal-vue": "^2.1.5",
     "register-service-worker": "^1.6.2",
     "tinycolor2": "^1.4.1",
     "underscore": "^1.9.1",
     "vue": "^2.6.10",
+    "vue-base": "github:bhgeorge/vue-base#v0.0.1",
     "vue-router": "^3.0.3",
     "vuedraggable": "^2.21.0",
     "vuex": "^3.0.1"
@@ -35,7 +35,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
-    "scss-base": "github:bhgeorge/scss-base#0.1.1",
+    "scss-base": "github:bhgeorge/scss-base#v0.2.6",
     "vue-template-compiler": "^2.6.10"
   }
 }
